@@ -1,6 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(Makefile.am)
 
+# autoconf 2.50 or higher to rebuild aclocal.m4, because the
+# AC_CREATE_PREFIX_CONFIG_H macro needs the AS_DIRNAME macro.
+AC_PREREQ(2.50)
+
 #
 # Making releases:
 #   CPPUNIT_MICRO_VERSION += 1;
